--- a/public/print.css
+++ b/public/print.css
@@ -1,14 +1,14 @@
 :root {
-  --color-background: none !important;
-  --color-background-light: hsl(240, 20%, 96%) !important;
+  --color-background: black !important;
+  --color-background-light: hsl(240, 21%, 96%) !important;
   --color-text: hsla(0, 0%, 0%, 95%) !important;
-  --color-text-light: hsla(0, 0%, 0%, 87%) !important;
+  --color-text-light: hsla(0, 0%, 0%, 86%) !important;
   --color-text-lighter: hsla(0, 0%, 0%, 76%) !important;
   --color-primary: hsl(217, 98%, 66%) !important;
   --color-primary-light: hsl(217, 98%, 77%) !important;
   --color-code-background: hsl(225, 15%, 94%) !important;
   --color-border: hsl(235, 25%, 63%) !important;
-  --color-border-light: hsl(235, 15%, 82%) !important;
+  --color-border-light: hsl(235, 25%, 82%) !important;
 }
 
 @page {
